<resources>
    <string name="app_name">Click To Food</string>
    <string name="manager_student">Student Manager</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="Name">Name: </string>
    <string name="Address">Address: </string>
    <string name="phone">Phone:  </string>
    <string name="next">Next</string>
    <string name="add_student">Student Registration</string>
    <string name="add_student_new">Add new students</string>
    <string name="edit_student">Edit info</string>
    <string name="back">ở đây chúng tôi không cho phép điều này</string>
    <string name="enter_sv_name">Enter student name</string>
    <string name="enter_sv_address">Enter student address</string>
    <string name="enter_sv_phone">Enter student phone</string>

    <string name="more">More</string>
    <string name="wishlist">Wish list</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="count_voucher">8 promos are available</string>
    <!--    text fragment home-->
    <string name="shop_by_category">Shop By Category</string>
    <string name="viewall">View All</string>
    <string name="hotdealforhotmenu">Hot deal for hot menu</string>
    <string name="recommended_for_you">Recommended for you</string>
    <!--    distance-->
    <string name="distance1">0.58 km * </string>
    <string name="distance2">1.26 km * </string>
    <string name="distance3">22 min</string>
    <string name="distance4">23 min</string>
    <!--    name food-->
    <string name="name_food1">Stew beef, pieces of beef stewed in soy sauce with spices with pickled cucumber in asian style</string>
    <string name="name_food2">Pieces of chicken fillet with mushrooms stewed in tomato sauce with boiled broccoli and rice</string>
    <!--    ratting-->
    <string name="ratting1">4.4 * </string>
    <string name="ratting2">4.0 * </string>
    <string name="ratting3">100+ ratings</string>
    <string name="ratting4">60+ ratings</string>
    <!--    login-->
    <string name="welcome">"Welcome"</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="login">Log in</string>
    <string name="signin_with_google">Continue with google</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="create_new_acc">Create a new account</string>

    <string name="facebook_app_id">3122316111339918</string>
    <string name="fb_login_protocol_scheme">fb3122316111339918</string>
    <string name="facebook_client_token">b97cf45301b3f047eff4fe00f22b4ffc</string>
    <string name="or">OR</string>

    <!--    ko rõ-->
    <string name="Getstarted">Get Started</string>
    <string name="search">Search</string>
    <!-- sign up-->
    <string name="signup">Sign Up</string>
    <string name="login_here">Already have an account?</string>
    <string name="comfirmpass">Confirm password</string>
    <string name="namesignup">Name</string>
    <string name="terms">I Agree To The Terms and condition</string>
    <!--    more-->
    <string name="edit_profile">Edit profile     ></string>
    <string name="account">Account</string>
    <string name="myorders">My orders</string>
    <string name="promos">Promos</string>
    <string name="payment_methosds">Payment Methods</string>
    <string name="help">Help &amp; My Tickets</string>
    <string name="language">Change Language</string>
    <string name="invite_friend">Invite friends</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log out</string>
    <string name="privacy">Privacy Policy</string>
    <string name="termsofservice">Terms of Service</string>
    <string name="rate_app">Rate App</string>
    <string name="quick_login">Quick login</string>
    <string name="save">Saved</string>
    <string name="app_id">com.tunanh.clicktofood</string>
    <!--app-->
    <string name="appID">993028136701941997</string>
    <string name="general">General</string>
    <string name="update_profile">Update Profile</string>

<!--    home-->
    <string name="see_all">See all</string>
    <string name="go_food_hn">Go Food Hn</string>
    <string name="listfood">ăn ngon cực</string>
    <string name="rating">4,3 . 60+ ratings</string>
    <string name="tvRecommend">More to love. Recommend of you.</string>
    <string name="try_these_and_thank_us_latter">Try these and thank us latter</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="_8_promo_are_available">8 promo are available</string>
    <string name="network_fail">network connection error</string>
    <string name="connected">connection has been restored</string>
</resources>