<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp">

        <include
            android:id="@+id/searchView1"
            layout="@layout/search_view"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/layoutSlide"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <me.relex.circleindicator.CircleIndicator3
                        android:id="@+id/indicator"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_alignParentBottom="true"
                        android:padding="20dp"
                        app:ci_drawable="@drawable/circle_slide"
                        app:ci_gravity="center_vertical" />

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/viewPager2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/indicator"
                        android:layout_centerInParent="true"
                        android:orientation="horizontal" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/promoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layoutSlide">

                    <include layout="@layout/promo" />
                </RelativeLayout>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:background="#1E000000"
                    app:layout_constraintTop_toBottomOf="@id/promoLayout" />

                <TextView
                    android:id="@+id/seeAllCategory"
                    android:layout_width="70dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="#229728"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view1" />

                <TextView
                    android:id="@+id/title_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingStart="12dp"
                    android:paddingEnd="10dp"
                    android:text="@string/category"
                    android:textAllCaps="true"
                    android:textColor="@color/textcolor1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/seeAllCategory"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/seeAllCategory" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/seeAllCategory"
                    app:spanCount="2"
                    tools:listitem="@layout/item_category_home" />

                <TextView
                    android:id="@+id/seeAll"
                    android:layout_width="70dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/see_all"
                    android:textAllCaps="false"
                    android:textColor="#229728"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/categoryes" />

                <TextView
                    android:id="@+id/titleSnack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingStart="12dp"
                    android:paddingEnd="10dp"
                    android:text="@string/listfood"
                    android:textAllCaps="true"
                    android:textColor="@color/textcolor1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/seeAll"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/seeAll" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="0dp"
                    android:text="@string/go_food_hn"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@id/titleSnack"
                    app:layout_constraintTop_toBottomOf="@id/titleSnack" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/seeAll"
                    tools:listitem="@layout/item_recyclerview2" />

                <TextView
                    android:id="@+id/tvRecommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="12dp"
                    android:text="@string/tvRecommend"
                    android:textColor="@color/textcolor1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/recyclerView2"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvTry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingStart="12dp"
                    android:text="@string/try_these_and_thank_us_latter"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/tvRecommend"
                    tools:ignore="RtlSymmetry" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewRecommend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tvTry"
                    tools:listitem="@layout/item_recommend" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>